# mU

./: .cproject  .gitignore  .project  CMakeLists.txt  COPYING  UnifyPackageNameFormat.cmake  bootstrap.bat  bootstrap.sh  build.sh  mU.ini  mU.sln  setup.nsi  style.bat
0.x/: CMakeLists.txt
0.x/Include/mU/: Parser.h  Pattern.h
0.x/Kernel/: coefficient.cpp  compare.cpp  eval.cpp  initialize.cpp  number.cpp  print.cpp  string.cpp  times.cpp
0.x/Package/Function/: Function.cpp  sieve.cpp  sieve.h
0.x/Package/Graphics/: CMakeLists.txt  ContourPlot3D.cpp  Curve.cpp  Curve.h  Curve3D.cpp  F3P.cpp  F3P.h  GraphicsMaker.cpp  ImplicitCurve.cpp  IndexedQuadArray3D.cpp  IndexedQuadArray3D.h  ParametricRegion.cpp  (+6 more)
Calculus/: D.u  Integrate.u
Combinatorics/: CMakeLists.txt  Combinatorics.cpp  Combinatorics.u  Combinatorics.vcxproj  Combinatorics.vcxproj.filters  Factorial.Impl.cpp  Factorial.Impl.h  Factorial.cpp  Factorial.sieve.cpp  Factorial.sieve.h  gmp.cpp
Function/: CMakeLists.txt  Function.cpp  Function.u  Function.vcxproj  Function.vcxproj.filters  chudnovsky.cpp  factorial.cpp  mpfr.cpp  sieve.cpp  sieve.h
Include/: gmp.h  mpfr.h
Include/mU/: Combinatorics.h  Common.h  Exceptions.h  Function.h  Grammar.h  Interface.h  Kernel.h  Match.h  Number.h  Numeric.h  Object.h  Parser.h  Pattern.h  Polynomial.h  Stream.h  String.h  System.h  UnicodeDevice.h  Var.h  utils.h  var.h
Interface/: CMakeLists.txt  Interface.cpp  Interface.vcxproj  Interface.vcxproj.filters  Match.h  MatchC.cpp  MatchE.cpp
Invoke/: ReadMe.txt
Kernel/: CMakeLists.txt  Common.cpp  Interface.cpp  Kernel.cpp  Kernel.u  Kernel.vcxproj  Kernel.vcxproj.filters  assign.cpp  box.cpp  character.h  compare.cpp  do.cpp  dot.cpp  eval.cpp  evalf.cpp  expand.cpp  gen.cpp  get.cpp  initialize.cpp  main.cpp  match.cpp  matchC.cpp  matchE.cpp  package.cpp  parser.cpp  path.cpp  pattern.cpp  plus.cpp  power.cpp  pretty.cpp  print.cpp  rewrite.cpp  scan.cpp  set.cpp  string.cpp  symbol.cpp  utils.cpp  value.cpp  var.cpp
Link/Ecl/: CMakeLists.txt  Ecl.cpp  Ecl.h  Ecl.u  EclObject.cpp  EclObject.h  eclConfig.cmake
Link/Ecl/Embed/: CMakeLists.txt  Ecl.cpp  Ecl.u  EclTest.u
Link/mU0/: CMakeLists.txt  mU0.cpp  mU0.h  mU0Config.cmake  mU0Object.cpp  mU0Object.h
Link/mU0/Embed/: CMakeLists.txt  mU0.cpp  mU0.u  mU0Test.u
Number/: CMakeLists.txt  Cast.cpp  Divide.cpp  Minus.cpp  Number.cpp  Number.u  Number.vcxproj  Number.vcxproj.filters  Plus.cpp  Times.cpp
Numeric/: CMakeLists.txt  Compare.cpp  N.cpp  Numeric.cpp  Numeric.u  Numeric.vcxproj  Numeric.vcxproj.filters  Pi.Impl.cpp  Pi.Impl.h  Pi.cpp  Precision.cpp  mpfr.cpp
Package/: CMakeLists.txt
Package/Differential/: CMakeLists.txt  D.u  Differential.cpp
Package/Function/: CMakeLists.txt  Function.cpp  chudnovsky.cpp  factorial.cpp  mpfr.cpp  mpfr.h
Package/Graphics/: CMakeLists.txt  CommonCurve.cpp  CommonCurve.h  CommonCurveWithPlotRange.cpp  CommonCurveWithPlotRange.h  ContourPlot.cpp  ContourPlot.h  ContourPlot3D.h  Curve.h  Curve3D.h  F1P.cpp  F1P.h  F2P.cpp  F2P.h  Graphics.cpp  GraphicsMaker.h  GraphicsMaker2D.cpp  GraphicsMaker2D.h  GraphicsMaker3D.cpp  GraphicsMaker3D.h  ImplicitCurve.cpp  ImplicitCurve.h  ImplicitSurface.cpp  ImplicitSurface.h  IndexedQuadArray.cpp  IndexedQuadArray.h  ListPlot.cpp  ListPlot.h  ParametricCurve.cpp  ParametricCurve.h  ParametricCurve3D.cpp  ParametricCurve3D.h  ParametricCurvePlot.cpp  ParametricCurvePlot.h  ParametricRegion.h  ParametricRegionPlot.cpp  ParametricSurface.cpp  ParametricSurface.h  ParametricSurfacePlot3D.cpp  ParametricSurfacePlot3D.h  (+9 more)
Package/Integration/: Integrate.u
Package/Matrix/: BLAS.cpp  CMakeLists.txt  Gauss.cpp  Matrix.cpp  Matrix.h  MatrixConstruct.cpp  ModGaussSmallP.cpp  ModulusGauss.cpp  Strassen.cpp
Package/NumberTheory/: Basic.cpp  CMakeLists.txt  FactorInteger.cpp  NumberTheory.cpp  PrimeQ.cpp  common.h  integer.cpp  interface.cpp  list.cpp  objects.h  var.cpp
Package/Polynomial/: CMakeLists.txt  ExternFactorization.cpp  ExternPolynomial.cpp  UniSolve.u  common.h  floatbasic.cpp  jenkins-traub.cpp  multigcdz.cpp  multigcdzp.cpp  multigroebner.cpp  multirss.cpp  multisparseq.cpp  multisparsez.cpp  multiwu.cpp  polyfloat.h  polyrandom.cpp  uniarithmetic.cpp  unicyclotomic.cpp  unidecompose.cpp  uniexactsolution.cpp  unifacz.cpp  unifaczp.cpp  unigcd.cpp  unirootseparation.cpp  unismallprime.cpp
Package/Product/: Prod.u
Package/Stream/: CMakeLists.txt  Stream.cpp  buffer.cpp  link.cpp  pipe.cpp
Package/Summation/: Sum.u
Package/TeX/: TeX.tr
Parser/: CMakeLists.txt  Grammar.cpp  Parser.cpp  Parser.vcxproj  Parser.vcxproj.filters  character.txt  gen.cpp  parse.cpp  print.cpp  read.cpp  scan.cpp
Polynomial/: Add.cpp  CMakeLists.txt  Divide.cpp  Expand.cpp  Minus.cpp  Mul.cpp  Plus.cpp  Polynomial.cpp  Polynomial.u  Polynomial.vcxproj  Polynomial.vcxproj.filters  Sparse.cpp  Sparse.h  Times.cpp
Projects/: mU.sln  mU.sln.old
Projects/Differential/: Differential.vcproj  Differential.vcxproj  Differential.vcxproj.filters
Projects/Function/: Function.vcproj  Function.vcxproj  Function.vcxproj.filters
Projects/Graphics/: Graphics.vcproj  Graphics.vcxproj
Projects/Kernel/: Kernel.vcxproj  Kernel.vcxproj.filters
Projects/Matrix/: Matrix.vcxproj  Matrix.vcxproj.filters
Projects/NumberTheory/: NumberTheory.vcproj  NumberTheory.vcxproj  NumberTheory.vcxproj.filters
Projects/Polynomial/: Polynomial.vcproj  Polynomial.vcxproj  Polynomial.vcxproj.filters
Projects/Stream/: Stream.vcproj  Stream.vcxproj  Stream.vcxproj.filters
Projects/mU/: mU.vcproj  mU.vcxproj  mU.vcxproj.filters
String/: CMakeLists.txt  Join.cpp  String.cpp  String.u  String.vcxproj  String.vcxproj.filters
System/: Attribute.cpp  Attributes.cpp  Block.cpp  CInterface.cpp  CMakeLists.txt  Context.cpp  For.cpp  Function.cpp  Input.cpp  List.cpp  Local.cpp  Match.cpp  New.cpp  Order.cpp  Output.cpp  Path.cpp  Print.cpp  Set.cpp  Slot.cpp  System.cpp  System.u  System.vcxproj  System.vcxproj.filters
Test/: Test.u
mU/: CMakeLists.txt  mU.ini  mU.reg  mU.vcxproj  mU.vcxproj.filters  main.cpp
(+96 files in other folders)
