include_directories(${mU_HEADER_DIR})
AUX_SOURCE_DIRECTORY(. KERNEL_SRCS)
add_executable(mU ${KERNEL_SRCS})
set_target_properties(mU PROPERTIES
                        ENABLE_EXPORTS ON)
if(WIN32)
    target_link_libraries(mU gmp)
elseif(UNIX)
    target_link_libraries(mU pthread gmp dl)
else()
    message(FATAL_ERROR "building on an unsupported operating system")
endif()